--- a/index.html
+++ b/index.html
@@ -1,1 +1,57 @@
+<!DOCTYPE html>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Ulm City-Butler</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
 
+    <header>
+        <h1>Welcome to Ulm City-Butler</h1>
+        <nav>
+            <ul>
+                <li><a href="#attractions">Attractions</a></li>
+                <li><a href="#restaurants">Restaurants</a></li>
+                <li><a href="#accomodations">Accomodation</a></li>
+                <li><a href="#contacts">Contact</a></li>
+            </ul>
+        </nav>
+    </header>
+
+    <div class="content-wrapper">
+    <main>
+        <section id="attractions">
+            <h2>Attractions in Ulm</h2>
+        </section>
+
+        <section id="restaurants">
+            <h2>Restaurants in Ulm</h2>
+            
+            <h4>Die Halle</h4>
+            <p>Im Herzen von Ulm gelegen, bietet "Die Halle" eine kulinarische Reise, die die Essenz lokaler und internationaler Küche einfängt.
+                Dieses lebendige Restaurant zeichnet sich durch Gerichte aus, die sowohl optisch beeindruckend als auch köstlich sind.
+                Mit einem Schwerpunkt auf frischen, lokal bezogenen Zutaten, steht das Menü von Die Halle für Qualität und Kreativität.
+                Die einladende Atmosphäre, kombiniert mit einer modern-rustikalen Dekoration, macht es zum perfekten Ort für jede Gelegenheit, von zwanglosen Mittagessen bis zu besonderen Feierlichkeiten.</p>
+            <script src="https://static.elfsight.com/platform/platform.js" data-use-service-core defer></script>
+            <div class="elfsight-app-9c39b6b1-e723-4ddf-8394-0fed43560ad4" data-elfsight-app-lazy></div>
+        </section>
+
+        <section id="accomodations">
+            <h2>Accomodation in Ulm</h2>
+        </section>
+
+        <section id="contacts">
+            <h2>Contacts in Ulm</h2>
+        </section>
+    </main>
+    </div>
+
+    <footer class="footer-element">
+        <p>&copy; 2024 Ulm City-Butler. All rights reserved</p>
+    </footer>
+
+    
+
+    <script src="script.js"></script>
+</body>
