--- a/index.html
+++ b/index.html
@@ -32,7 +32,9 @@
             <p>Im Herzen von Ulm gelegen, bietet "Die Halle" eine kulinarische Reise, die die Essenz lokaler und internationaler Küche einfängt.
                 Dieses lebendige Restaurant zeichnet sich durch Gerichte aus, die sowohl optisch beeindruckend als auch köstlich sind.
                 Mit einem Schwerpunkt auf frischen, lokal bezogenen Zutaten, steht das Menü von Die Halle für Qualität und Kreativität.
-                Die einladende Atmosphäre, kombiniert mit einer modern-rustikalen Dekoration, macht es zum perfekten Ort für jede Gelegenheit, von zwanglosen Mittagessen bis zu besonderen Feierlichkeiten.</p>
+                Die einladende Atmosphäre, kombiniert mit einer modern-rustikalen Dekoration, macht es zum perfekten Ort für jede Gelegenheit, von zwanglosen Mittagessen bis zu besonderen Feierlichkeiten.
+            </p>
+            <div id="image-container"></div>
             <script src="https://static.elfsight.com/platform/platform.js" data-use-service-core defer></script>
             <div class="elfsight-app-9c39b6b1-e723-4ddf-8394-0fed43560ad4" data-elfsight-app-lazy></div>
         </section>
