--- a/index.html
+++ b/index.html
@@ -7,6 +7,15 @@
 </head>
 <body>
 
+    <script>
+        const options = {method: 'GET', headers: {accept: 'application/json'}};
+
+        fetch('https://api.content.tripadvisor.com/api/v1/location/20936952/photos?key=YOUR_API_KEY&language=de', options)
+          .then(response => response.json())
+          .then(data => console.log(data))
+          .catch(err => console.error(err));
+    </script>
+
     <header>
         <h1>Welcome to Ulm City-Butler</h1>
         <nav>
