--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                 <h1 slot="header">OMW!</h1>
                 <p id="text_cards" slot="content">Genießen Sie eine gemütliche Auszeit bei köstlichem Kaffee und hausgemachten Kuchen in 'OMW! Das kleine Café'.</p>
               </card>
-              <card data-image="Fotos/qmuh-ulm.jpg">
+              <card data-image="qmuh-ulm.jpg">
                 <h1 slot="header">Qmuh</h1>
                 <p id="text_cards" slot="content">Genießen Sie einzigartige Burger und erfrischende Drinks im lebhaften Ambiente des QMUH Ulm.</p>
               </card>
