--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                 <h1 slot="header">Barfüßer</h1>
                 <p id="text_cards" slot="content">Erleben Sie traditionelle schwäbische Küche und hausgebrautes Bier in der gemütlichen Atmosphäre der Barfüßer Hausbrauerei Ulm.</p>
               </card>
-              <card data-image="Fotos/omw.jpg">
+              <card data-image="/omw.jpg">
                 <h1 slot="header">OMW!</h1>
                 <p id="text_cards" slot="content">Genießen Sie eine gemütliche Auszeit bei köstlichem Kaffee und hausgemachten Kuchen in 'OMW! Das kleine Café'.</p>
               </card>
