--- a/index.html
+++ b/index.html
@@ -44,11 +44,11 @@
             <h2 class="cards_title">Hello vro</h2>
 
             <div id="app" class="container">
-              <card data-image="Fotos/dining-area.jpg">
+              <card data-image="/dining-area.jpg">
                 <h1 slot="header">Die Halle</h1>
                 <p id="text_cards" slot="content">Entdecken Sie moderne Gaumenfreuden in der stilvollen und entspannten Atmosphäre von 'Die Halle' in Ulm.</p>
               </card>
-              <card data-image="Fotos/barfus.jpg">
+              <card data-image="barfus.jpg">
                 <h1 slot="header">Barfüßer</h1>
                 <p id="text_cards" slot="content">Erleben Sie traditionelle schwäbische Küche und hausgebrautes Bier in der gemütlichen Atmosphäre der Barfüßer Hausbrauerei Ulm.</p>
               </card>
