--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             <h2 class="cards_title">Hello vro</h2>
 
             <div id="app" class="container">
-              <card data-image="/dining-area.jpg">
+              <card data-image="dining-area.jpg">
                 <h1 slot="header">Die Halle</h1>
                 <p id="text_cards" slot="content">Entdecken Sie moderne Gaumenfreuden in der stilvollen und entspannten Atmosphäre von 'Die Halle' in Ulm.</p>
               </card>
