--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         </section>
 
         <section id="restaurants">
-            <h2 class="cards_title">Hello vro</h2>
+            <h2 class="cards_title">Restaurants</h2>
 
             <div id="app" class="container">
               <card data-image="dining-area.jpg">
